unpackaged/main/default/objects/Quarterly_Financial_Performance__c/Quarterly_Financial_Performance__c.object-meta.xml
<CustomObject>
    <label>Quarterly Financial Performance</label>
    <nameField>
        <displayFormat>QFP-{0}</displayFormat>
        <label>Quarterly Financial Performance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Financial Performances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>