unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Carrying_Value__c.field-meta.xml
<CustomField>
    <fullName>Carrying_Value__c</fullName>
    <label>Carrying Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>