unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quarterly Financial Performances</relationshipLabel>
    <relationshipName>Quarterly_Financial_Performance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>