unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Date_of_Exit_or_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Exit_or_Valuation__c</fullName>
    <label>Date of Exit or Valuation</label>
    <type>Date</type>
</CustomField>