unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/EBIT_mn__c.field-meta.xml
<CustomField>
    <fullName>EBIT_mn__c</fullName>
    <label>EBIT (mn)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>