unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/EBITDA_Margin__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Margin__c</fullName>
    <formula>if(Revenue_mn__c =0 , 0, EBITDA_mn__c/Revenue_mn__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBITDA Margin</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>