unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/EBITDA_mn__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_mn__c</fullName>
    <label>EBITDA (mn)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>