unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/EBITDA_Multiple__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Multiple__c</fullName>
    <label>EBITDA Multiple</label>
    <length>20</length>
    <type>Text</type>
</CustomField>