unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/EBITDA_Performance__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Performance__c</fullName>
    <formula>IF( EBITDA_Plan__c == null || EBITDA_Plan__c == 0,0,(EBITDA_mn__c- EBITDA_Plan__c )/ EBITDA_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBITDA Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>