unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/EBITDA_Plan__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Plan__c</fullName>
    <label>EBITDA Plan</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>