unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Equity_mn__c.field-meta.xml
<CustomField>
    <fullName>Equity_mn__c</fullName>
    <label>Equity (mn)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>