unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Fiscal_Year_end__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_end__c</fullName>
    <label>Fiscal Year end</label>
    <type>Date</type>
</CustomField>