unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Fx_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fx_Rate__c</fullName>
    <label>Fx Rate</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>