unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/GAAP_EBIDTA_mn__c.field-meta.xml
<CustomField>
    <fullName>GAAP_EBIDTA_mn__c</fullName>
    <label>GAAP EBITDA (mn)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>