unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Gross_IRR__c.field-meta.xml
<CustomField>
    <fullName>Gross_IRR__c</fullName>
    <label>Gross IRR</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>