unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <label>Gross Margin</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>