unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/LTM_Comments__c.field-meta.xml
<CustomField>
    <fullName>LTM_Comments__c</fullName>
    <label>LTM Comments</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>