unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Management_Own__c.field-meta.xml
<CustomField>
    <fullName>Management_Own__c</fullName>
    <label>Management % Own</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>