unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Net_Debt_mn__c.field-meta.xml
<CustomField>
    <fullName>Net_Debt_mn__c</fullName>
    <label>Net Debt (mn)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>