unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Our_Control__c.field-meta.xml
<CustomField>
    <fullName>Our_Control__c</fullName>
    <label>Our % Control</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>