unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Our_Own__c.field-meta.xml
<CustomField>
    <fullName>Our_Own__c</fullName>
    <label>Our % Own</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>