unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Quarter_end_Date__c.field-meta.xml
<CustomField>
    <fullName>Quarter_end_Date__c</fullName>
    <label>Quarter-end Date</label>
    <type>Date</type>
</CustomField>