unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Remaining_Cost__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Cost__c</fullName>
    <label>Remaining Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>