unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Revenue_Performance__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Performance__c</fullName>
    <formula>IF( Revenue_Plan__c == null || Revenue_Plan__c == 0,0,(Revenue_mn__c -  Revenue_Plan__c ) /  Revenue_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>