unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <label>ROI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>