unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Valuation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Comments__c</fullName>
    <label>Valuation Comments</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>