unpackaged/main/default/objects/Quarterly_Financial_Performance__c/fields/Valuation_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Methodology__c</fullName>
    <label>Valuation Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EBITDA Multiple</fullName>
            </value>
            <value>
                <fullName>DCF</fullName>
            </value>
            <value>
                <fullName>YTM</fullName>
            </value>
            <value>
                <fullName>Revenue Multiple</fullName>
            </value>
            <value>
                <fullName>Marked to Market (Discounted)</fullName>
            </value>
            <value>
                <fullName>Marked to Market (Not discounted)</fullName>
            </value>
            <value>
                <fullName>Black Scholes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>